some minor refactoring and cleaning